--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SwitchLanguage</string>
-    <string name="changeLangTitle">Changer la langue</string>
-    <string name="changeLangText">Changer la langue</string>
-    <string name="changeLangButton">Utilisez le bouton pour changer la langue</string>
-    <string name="changeLangSpinner">Utilisez le spinner pour changer de langue</string>
+    <string name="changeLangTitle">Sélectionner la langue</string>
+    <string name="changeLangText">Sélectionner la langue</string>
+    <string name="changeLangList">Sélectionner via LISTA</string>
+    <string name="changeLangSpinner">Sélectionnez via SPINNER</string>
 </resources>
